--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-	<link rel="preload" as="image" href="assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.jpg">
-	<script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+	<link rel="prefetch" as="image" href="assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp" type="image/webp">
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.3.0/js/bootstrap.bundle.js"></script>
 
     <meta charset="UTF-8">
@@ -31,7 +30,7 @@
     <link rel="stylesheet" href="./assets/style.css">
     
     <!-- JavaScript optimisé -->
-	<script defer src="https://code.jquery.com/jquery-3.4.1.js"></script>
+	<script defer src="https://code.jquery.com/jquery-3.6.0.js"></script>
     <script defer src="./assets/bootstrap/bootstrap.bundle.js"></script>
     <script defer src="./assets/maugallery.js"></script>
     <script async src="./assets/scripts.js"></script>
@@ -68,7 +67,7 @@
                 <li><a href="#services">Service</a></li>
                 <li><a href="#contact">Contact</a></li>
                 <li><a class="social-link" href="https://www.instagram.com/ninacarducci.photo/?hl=fr" target="_blank">
-                    <img src="assets/images/instagram.png" width="40" height="40" alt="Instagram Nina Carducci">
+                    <img src="assets/images/instagram.webp" width="40" height="40" alt="Instagram Nina Carducci">
                 </a></li>
             </ul>
         </nav>
@@ -81,13 +80,13 @@
         <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.jpg" class="d-block w-100" width="1200" height="800" alt="Image 1">
+                    <img src="assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp" class="d-block w-100" width="1200" height="800" fetchpriority="high" alt="Image 1">
                 </div>
                 <div class="carousel-item">
-                    <img src="assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.jpg" class="d-block w-100" loading="lazy" alt="Image 2">
+                    <img src="assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.webp" class="d-block w-100" loading="lazy" alt="Image 2">
                 </div>
                 <div class="carousel-item">
-                    <img src="assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.jpg" class="d-block w-100" loading="lazy" alt="Image 3">
+                    <img src="assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.webp" class="d-block w-100" loading="lazy" alt="Image 3">
                 </div>
             </div>
         </div>
@@ -96,7 +95,7 @@
     <!-- Section À propos optimisée -->
     <section id="about">
         <div class="picture left">
-            <img src="./assets/images/nina.png" width="600" height="400" loading="lazy" alt="Portrait de Nina Carducci">
+            <img src="./assets/images/nina.webp" width="600" height="400" loading="lazy" alt="Portrait de Nina Carducci">
         </div>
         <div id="about-me">
             <h2>A propos de moi</h2>
