--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <li><a href="#gallery">Galerie</a></li>
                 <li><a href="#services">Service</a></li>
                 <li><a href="#contact">Contact</a></li>
-                <li><a class="social-link" href="https://www.instagram.com/ninacarducci.photo/?hl=fr" target="_blank">
+                <li><a class="social-link" href="https://www.instagram.com/ninacarducci.photo/?hl=fr" target="_blank" aria-label="Profil Instagram de Nina Carducci">
                     <img src="assets/images/instagram.webp" width="40" height="40" alt="Instagram Nina Carducci">
                 </a></li>
             </ul>
