--- a/index.html
+++ b/index.html
@@ -77,7 +77,28 @@
 <main>
     <!-- Section Carrousel optimisée -->
     <section id="header">
-        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+        <div id="carouselExampleIndicators"
+     class="carousel slide"
+     data-bs-ride="carousel"
+     role="region"
+     aria-label="Carrousel de photographies principales">
+
+  <div class="carousel-indicators">
+    <button type="button"
+            data-bs-target="#carouselExampleIndicators"
+            data-bs-slide-to="0"
+            class="active"
+            aria-current="true"
+            aria-label="Afficher la première image"></button>
+    <button type="button"
+            data-bs-target="#carouselExampleIndicators"
+            data-bs-slide-to="1"
+            aria-label="Afficher la deuxième image"></button>
+    <button type="button"
+            data-bs-target="#carouselExampleIndicators"
+            data-bs-slide-to="2"
+            aria-label="Afficher la troisième image"></button>
+  </div>
             <div class="carousel-inner">
                 <div class="carousel-item active">
                     <img src="assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp" class="d-block w-100" width="1200" height="800" fetchpriority="high" alt="Image 1">
@@ -89,6 +110,23 @@
                     <img src="assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.webp" class="d-block w-100" loading="lazy" alt="Image 3">
                 </div>
             </div>
+
+            <button class="carousel-control-prev"
+          type="button"
+          data-bs-target="#carouselExampleIndicators"
+          data-bs-slide="prev"
+          aria-label="Image précédente">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+  </button>
+
+  <button class="carousel-control-next"
+          type="button"
+          data-bs-target="#carouselExampleIndicators"
+          data-bs-slide="next"
+          aria-label="Image suivante">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+  </button>
+</div>
         </div>
     </section>
 
@@ -99,7 +137,9 @@
         </div>
         <div id="about-me">
             <h2>A propos de moi</h2>
-            <p>Devenir photographe était pour moi une évidence...</p>
+            <h6 class="about-me__introduction">Devenir photographe était pour moi une évidence. Comme si j’y étais prédestiné. Saisir un moment, une émotion, une situation, un endroit, une lumière et les rendre immortels, voilà ce qui me fait vibrer.</h6>
+		<p>Nous passons notre vie à chercher le bonheur, et lorsque nous y touchons, nous n’avons qu’une envie : le figer au travers de photographies pour le savourer avec les personnes qui sont importantes à nos yeux, ou le partager au plus grand nombre.
+			C’est ce que je vous propose : saisir ces merveilleux moments au travers de mon regard, mon approche, ma technique. Rendre ces moments immortels, afin que vous puissiez y puiser de l’amour, du bonheur, de la tendresse et de lumière à chaque fois que vous poserez les yeux sur vos photos.</p></p>
         </div>
     </section>
 
