Ajout de la catégorie Entrprises et ses images

--- a/index.html
+++ b/index.html
@@ -156,6 +156,10 @@
 				
                 <img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.webp" width="800" height="600" loading="lazy" alt="Portrait">
 				<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.webp" width="800" height="600" loading="lazy" alt="Portrait">
+
+                <img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.webp" width="800" height="600" loading="lazy" alt="Entreprises"/>
+			    <img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.webp" width="800" height="600" loading="lazy" alt="Entreprises"/>
+                <img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.webp" width="800" height="600" loading="lazy" alt="Entreprises"/>
             </div>
         </div>
     </section>
@@ -176,6 +180,9 @@
                 <input type="submit" value="Envoyer">
             </form>
         </div>
+        <div class="picture right">
+			<img src="./assets/images/camera.webp">
+		</div>
     </div>
 </section>
 
