Remplace async par defer sur scripts.js

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 	<script defer src="https://code.jquery.com/jquery-3.6.0.js"></script>
     <script defer src="./assets/bootstrap/bootstrap.bundle.js"></script>
     <script defer src="./assets/maugallery.js"></script>
-    <script async src="./assets/scripts.js"></script>
+    <script defer src="./assets/scripts.js"></script>
     
     <!-- Schema.org pour le référencement local -->
     <script type="application/ld+json">
@@ -163,6 +163,51 @@
             </div>
         </div>
     </section>
+
+    <div class="quote"> <figure> <blockquote> 
+        <h1 class="quote__text">Un portrait n’est pas une ressemblance. Dès lors qu’une émotion ou qu’un fait est traduit en photo, il cesse d’être un fait pour devenir une opinion. L’inexactitude n’existe pas en photographie. Toutes les photos sont exactes. Aucune d’elles n’est la vérité.</h1> </blockquote> <figcaption class="quote__author">- Richard Avedon</figcaption> </figure> 
+    </div> <div class="quote"> <figure> <blockquote> 
+        <h1 class="quote__text">De manière inconsciente, je crois, je guette un regard, une expression, des traits ou une nostalgie capable de résumer ou plus exactement de révéler une vie</h1> </blockquote> <figcaption class="quote__author">- Richard Avedon</figcaption> </figure> </div>
+
+    <section id="services" aria-labelledby="services-title">
+  <div class="container">
+    <h2 id="services-title" class="title">Mes services</h2>
+
+    <article class="service" role="region" aria-labelledby="service-photo">
+      <div class="service__description">
+        <h3 id="service-photo">Shooting photo</h3>
+        <p>Pour capturer vos moments les plus précieux et garder un souvenir impérissable. Je me déplace en Île-de-France pour réaliser vos photos.</p>
+      </div>
+      <div class="service__price">
+        <h4>350€ / demi-journée</h4>
+        <span>Matériel, déplacement inclus</span>
+      </div>
+    </article>
+
+    <article class="service" role="region" aria-labelledby="service-retouche">
+      <div class="service__description">
+        <h3 id="service-retouche">Retouches</h3>
+        <p>Vous souhaitez retoucher vos photos pour un résultat professionnel ? Bénéficiez d’un rendu optimal pour vos publications.</p>
+      </div>
+      <div class="service__price">
+        <h4>50€ / photo</h4>
+        <span>2 allers-retours par photo inclus</span>
+      </div>
+    </article>
+
+    <article class="service" role="region" aria-labelledby="service-album">
+      <div class="service__description">
+        <h3 id="service-album">Album photos</h3>
+        <p>Partagez les meilleurs moments avec vos proches à travers un album photo personnalisé haut de gamme.</p>
+      </div>
+      <div class="service__price">
+        <h4>400€ album A4</h4>
+        <span>30 pages recto/verso</span>
+      </div>
+    </article>
+  </div>
+</section>
+
 </main>
 
 <!-- Section Contact optimisée -->
@@ -181,7 +226,7 @@
             </form>
         </div>
         <div class="picture right">
-			<img src="./assets/images/camera.webp">
+			<img src="./assets/images/camera.webp" width="600" height="400" loading="lazy" alt="Camera">
 		</div>
     </div>
 </section>
