--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
       </div>
       <div id="about-me">
         <h3 class="about-me__title">A propos de moi</h3>
-        <h6 class="about-me__introduction">Devenir photographe était pour moi une évidence. Comme si j’y étais
+        <h4 class="about-me__introduction">Devenir photographe était pour moi une évidence. Comme si j’y étais
           prédestiné. Saisir un moment, une émotion, une situation, un endroit, une lumière et les rendre immortels,
           voilà ce qui me fait vibrer.</h6>
         <p>Nous passons notre vie à chercher le bonheur, et lorsque nous y touchons, nous n’avons qu’une envie : le
@@ -147,34 +147,34 @@
         <div class="gallery hidden">
           <img data-gallery-tag="Concert" class="gallery-item"
             src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.webp" width="800" height="600"
-            loading="lazy" alt="Concert">
+            loading="lazy" alt="Groupe rock en pleine performance live">
           <img data-gallery-tag="Concert" class="gallery-item"
             src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.webp" width="800" height="600"
-            loading="lazy" alt="Concert">
+            loading="lazy" alt="Musicien sur scène devant un public animé">
 
           <img data-gallery-tag="Mariages" class="gallery-item"
             src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.webp" width="800" height="600"
-            loading="lazy" alt="Mariage">
+            loading="lazy" alt="Couple échangeant leurs vœux devant les invités">
           <img data-gallery-tag="Mariages" class="gallery-item"
             src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.webp" width="800" height="600"
-            loading="lazy" alt="Mariage">
+            loading="lazy" alt="Mariés marchant ensemble sous le soleil">
 
           <img data-gallery-tag="Portrait" class="gallery-item"
             src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.webp" width="800" height="600"
-            loading="lazy" alt="Portrait">
+            loading="lazy" alt="Portrait d’un homme noir avec les yeux fermés">
           <img data-gallery-tag="Portrait" class="gallery-item"
             src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.webp" width="800"
-            height="600" loading="lazy" alt="Portrait">
+            height="600" loading="lazy" alt="Portrait en lumière naturelle d'une femme">
 
           <img data-gallery-tag="Entreprises" class="gallery-item"
             src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.webp" width="800" height="600"
-            loading="lazy" alt="Entreprises" />
+            loading="lazy" alt="Portrait professionnel d’un homme en costume sombre"/>
           <img data-gallery-tag="Entreprises" class="gallery-item"
             src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.webp" width="800" height="600"
-            loading="lazy" alt="Entreprises" />
+            loading="lazy" alt="Employées en réunion dans un bureau moderne" />
           <img data-gallery-tag="Entreprises" class="gallery-item"
             src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.webp" width="800"
-            height="600" loading="lazy" alt="Entreprises" />
+            height="600" loading="lazy" alt="Professionnel concentré devant son ordinateur" />
         </div>
         <div class="quote">
           <figure>
