suppression de certains éléments

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
           partager au plus grand nombre.
           C’est ce que je vous propose : saisir ces merveilleux moments au travers de mon regard, mon approche, ma
           technique. Rendre ces moments immortels, afin que vous puissiez y puiser de l’amour, du bonheur, de la
-          tendresse et de lumière à chaque fois que vous poserez les yeux sur vos photos.</p>
+          tendresse et de lumière à chaque fois que vous poserez les yeux sur vos photos.
         </p>
       </div>
     </section>
@@ -189,8 +189,8 @@
       </div>
     </section>
 
-    <section id="services" aria-labelledby="services-title">
-      <h2 id="services-title" class="title">Mes services</h2>
+    <section id="services">
+      <h3 class="title">Mes services</h3>
       <div class="container">
           <article class="service" role="region" aria-labelledby="service-photo">
             <div class="service__description">
@@ -246,16 +246,16 @@
   <section id="contact">
     <div class="container">
       <div class="form-container">
-        <h2>Une question ? Une demande de devis ?</h2>
+        <h3>Une question ? Une demande de devis ?</h3>
         <form action="" method="post">
-          <label for="nom">Nom</label>
-          <input type="text" name="nom" id="nom">
-          <label for="email">Email</label>
-          <input type="email" name="email" id="email">
-          <label for="message">Message</label>
-          <textarea name="message" id="message" cols="30" rows="10"></textarea>
-          <input type="submit" value="Envoyer">
-        </form>
+				<label>Nom</label>
+				<input type="text" name="nom" id="nom">
+				<label>Email</label>
+				<input type="email" name="email" id="email">
+				<label>Message</label>
+				<textarea name="message" id="message" cols="30" rows="10"></textarea>
+				<input type="submit" value="Envoyer"/>
+			</form>
       </div>
       <div class="picture right">
         <img src="./assets/images/camera.webp" width="600" height="400" loading="lazy" alt="Camera">
