--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
         <form action="" method="post">
 				<label for="nom">Nom</label>
 				<input type="text" name="nom" id="nom">
-				<label for="mail">Email</label>
+				<label for="email">Email</label>
 				<input type="email" name="email" id="email">
 				<label for="message">Message</label>
 				<textarea name="message" id="message" cols="30" rows="10"></textarea>
