--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
     href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap">
 
   <!-- Stylesheets optimisés -->
-  <link rel="stylesheet" href="./assets/bootstrap/bootstrap.css">
-  <link rel="stylesheet" href="./assets/style.css">
+  <link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css">
+  <link rel="stylesheet" href="./assets/style.min.css">
 
   <!-- JavaScript optimisé -->
   <script defer src="https://code.jquery.com/jquery-3.6.0.js"></script>
-  <script defer src="./assets/bootstrap/bootstrap.bundle.js"></script>
-  <script defer src="./assets/maugallery.js"></script>
-  <script defer src="./assets/scripts.js"></script>
+  <script defer src="./assets/bootstrap/bootstrap.bundle.min.js"></script>
+  <script defer src="./assets/maugallery.min.js"></script>
+  <script defer src="./assets/scripts.min.js"></script>
 
   <!-- Schema.org pour le référencement local -->
   <script type="application/ld+json">
@@ -227,6 +227,7 @@
             </div>
           </article>
         </div>
+
         <div class="quote">
           <figure>
             <blockquote>
